...
            }

            fabState?.let { fab ->
                FloatingActionButton(
                    onClick = fab.onClick,
                    modifier = Modifier
                        .testTag("top_level_fab")
                        .focusRequester(fabFocusRequester)
                        .tvFocusRing(shape = MaterialTheme.shapes.large)
                        .focusProperties {
                            if (isTv) {
                                up = fab.upFocusRequester.takeUnless { it == FocusRequester.Default }
                                    ?: contentFocusRequester
...
